Fix display of pop ups for the tree viewer on mobile.

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -30,7 +30,7 @@ h1, h2, button {
     font-size: 100%;
 }
 
-h1, h2 {
+h1, h2, h3 {
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
     margin-block-start: 0;
@@ -1107,6 +1107,7 @@ blockquote {
         width: 100%;
         text-align: center;
         background: #dcdcdc;
+        font-size: 1.15em;
         padding: 0.25em 1em;
         box-sizing: border-box;
     }
@@ -1118,7 +1119,7 @@ blockquote {
 
     .book-appendix-tree-section-subheader {
         font-weight: 300;
-        font-size: 1.15em;
+        font-size: 1.05em;
     }
 
     .book-appendix-tree-section-example-list {
